<resources>
    <string name="app_name">BasicCalculator</string>
    <string name="textview">Calculation</string>
    <string name="textview1">Numbers</string>
    <string name="bpercent">%</string>
    <string name="b7">7</string>
    <string name="b4">4</string>
    <string name="b1">1</string>
    <string name="bdot">.</string>
    <string name="b8">8</string>
    <string name="bplusminus">+/-</string>
    <string name="bequal">=</string>
    <string name="b9">9</string>
    <string name="b6">6</string>
    <string name="b3">3</string>
    <string name="bCE">CE</string>
    <string name="b0">0</string>
    <string name="b5">5</string>
    <string name="b2">2</string>
    <string name="bminus">-</string>
    <string name="bplus">+</string>
    <string name="bdvde">/</string>
    <string name="bmltply">*</string>
    <string name="bbckspce"><![CDATA[<=]]></string>
    <string name="twostrings">%s%s</string>
    <string name="threestrings">%s%s%s</string>
    <string name="stringndouble">%s%.2f</string>
    <string name="stringninteger">%s%d</string>
    <string name="threestringsndouble">%s%s%.2f%s</string>
    <string name="threestringsninteger">%s%s%d%s</string>
</resources>