<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/CalculationView"
            android:layout_width="379dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#6C6C6C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/NumbersView"
            android:layout_width="380dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/b0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/CalculationView"
            app:layout_constraintStart_toStartOf="@+id/CalculationView"
            app:layout_constraintTop_toBottomOf="@+id/CalculationView"
            tools:text="0" />

        <Button
            android:id="@+id/bbckspce"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClick"
            android:text="@string/bbckspce"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#519E96"
            app:layout_constraintBottom_toTopOf="@+id/bdvde"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bCE"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/bmltply"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:onClick="onClick"
            android:text="@string/bmltply"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toEndOf="@+id/b6"
            app:layout_constraintTop_toBottomOf="@+id/b7"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/bdvde"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:onClick="onClick"
            android:text="@string/bdvde"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.57"
            app:layout_constraintStart_toEndOf="@+id/b9"
            app:layout_constraintTop_toBottomOf="@+id/bpercent"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/bplus"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClick"
            android:text="@string/bplus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bequal"
            app:layout_constraintTop_toBottomOf="@+id/bminus"
            app:layout_constraintVertical_bias="0.0"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/bminus"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:onClick="onClick"
            android:text="@string/bminus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b3"
            app:layout_constraintTop_toBottomOf="@+id/b4"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/bCE"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClick"
            android:text="@string/bCE"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#D19494"
            app:layout_constraintBottom_toTopOf="@+id/b9"
            app:layout_constraintStart_toEndOf="@+id/bplusminus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/b3"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:text="@string/b3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintStart_toEndOf="@+id/b2"
            app:layout_constraintTop_toBottomOf="@+id/b4"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/b6"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:text="@string/b6"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintStart_toEndOf="@+id/b5"
            app:layout_constraintTop_toBottomOf="@+id/b7"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/b9"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:text="@string/b9"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintStart_toEndOf="@+id/b8"
            app:layout_constraintTop_toBottomOf="@+id/bpercent"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/bequal"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClick"
            android:text="@string/bequal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#519E96"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b0"
            app:layout_constraintTop_toBottomOf="@+id/b3"
            app:layout_constraintVertical_bias="0.0"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/bplusminus"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClick"
            android:text="@string/bplusminus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintBottom_toTopOf="@+id/b8"
            app:layout_constraintStart_toEndOf="@+id/bpercent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/b0"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClick"
            android:text="@string/b0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bdot"
            app:layout_constraintTop_toBottomOf="@+id/b2"
            app:layout_constraintVertical_bias="0.0"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/b2"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:text="@string/b2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintStart_toEndOf="@+id/b1"
            app:layout_constraintTop_toBottomOf="@+id/b4"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/b5"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:text="@string/b5"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintStart_toEndOf="@+id/b4"
            app:layout_constraintTop_toBottomOf="@+id/b7"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/b8"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:text="@string/b8"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintStart_toEndOf="@+id/b7"
            app:layout_constraintTop_toBottomOf="@+id/bpercent"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/bdot"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClick"
            android:text="@string/bdot"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1"
            app:layout_constraintVertical_bias="0.0"
            app:rippleColor="#FFFFFF"
            tools:text="." />

        <Button
            android:id="@+id/b1"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:onClick="onClick"
            android:text="@string/b1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintEnd_toStartOf="@+id/b0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b4"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/b4"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:onClick="onClick"
            android:text="@string/b4"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintEnd_toStartOf="@+id/b2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b7"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/b7"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:onClick="onClick"
            android:text="@string/b7"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:layout_constraintEnd_toStartOf="@+id/b5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bpercent"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/bpercent"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:onClick="onClick"
            android:text="@string/bpercent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:backgroundTint="#90CDC8"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/b8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="#FFFFFF"
            app:strokeColor="@color/white"
            tools:text="%" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>